# python-misc

./: .gitignore  license.md  readme.md
frozendictx/: .gitignore  dictionary.dic  facts.txt  links.md  pyproject.toml  readme-dev.md  readme.md  setup.cfg
frozendictx/frozendictx/: __init__.py  _frozendict.py
frozendictx/reports/: equality-x.md  equality.md  equality3.md  equality4.md  mapping-hash.md
frozendictx/tests/: mapping_hash.py  pycharm_typing.py
frozendictx/tests/performance/: equality.py  equality_x.py  helper.py  mapping_hash.py
frozendictx/tests/unittests/: test_frozendict.py  test_functions.py
misclib/: context.py  metaclasses.py  protocols.py  time.py
misclib/builtins/: _functions.py
misclib/collections/: _biject.py  list_view.py
misclib/context/: __init__.py
misclib/functions/: __init__.py  basic.py  comparators.py  indexing.py
misclib/utils/: color.py
tests/: test_color.py  test_context.py  test_metaclasses.py
tests/functions/: test_indexing.py
