[metadata]
name = frozendict-x
version = attr: frozendictx.version
license = MIT License
description = Typed immutable wrapper around dictionary
long_description = file: readme.md
long_description_content_type = text/markdown
author = Prometheus3375
author_email = prometheus3375@gmail.com
url = https://github.com/Prometheus3375/python-frozendict
keywords =
    dict
    dictionary
    frozen
    frozendict
    mapping
    immutable
    hashable

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Typing :: Typed

[options]
packages = find:
python_requires = >= 3.9.7, != 3.10.0a*, != 3.10.0b*

[options.packages.find]
where = .
include = frozendictx
